Add NeurIPS 2025 news post, update about page to enable announcements, and include publication preview image

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -25,17 +25,34 @@
 }
 
 @article{tang2025merging,
-  title   = {Merging models on the fly without retraining: A sequential approach to scalable continual model merging},
-  author  = {Tang, Anke and Yang, Enneng and Shen, Li and Luo, Yong and Hu, Han and Du, Bo and Tao, Dacheng},
-  journal = {arXiv preprint arXiv:2501.09522},
-  year    = {2025}
+  title       = {Merging models on the fly without retraining: A sequential approach to scalable continual model merging},
+  author      = {Tang, Anke and Yang, Enneng and Shen, Li and Luo, Yong and Hu, Han and Du, Bo and Tao, Dacheng},
+  journal     = {The Thirty-Ninth Annual Conference on Neural Information Processing Systems},
+  year        = {2025},
+  bibtex_show = {true},
+  selected    = {true},
+  abbr        = {NeurIPS},
+  preview     = {opcm.png},
+  html        = {https://tanganke.github.io/opcm}
+}
+
+@article{yang2025continual,
+  title       = {Continual Model Merging without Data: Dual Projections for Balancing Stability and Plasticity},
+  author      = {Yang, Enneng and Tang, Anke and Shen, Li and Guo, Guibing and Wang, Xingwei and Cao, Xiaochun and Jie, Zhang},
+  journal     = {The Thirty-Ninth Annual Conference on Neural Information Processing Systems},
+  year        = {2025},
+  bibtex_show = {true},
+  selected    = {true},
+  abbr        = {NeurIPS}
 }
 
 @article{yang2025mix,
-  title   = {Mix data or merge models? balancing the helpfulness, honesty, and harmlessness of large language model via model merging},
-  author  = {Yang, Jinluan and Jin, Dingnan and Tang, Anke and Shen, Li and Zhu, Didi and Chen, Zhengyu and Zhao, Ziyu and Wang, Daixin and Cui, Qing and Zhang, Zhiqiang and others},
-  journal = {arXiv preprint arXiv:2502.06876},
-  year    = {2025}
+  title       = {Mix Data or Merge Models? Balancing the Helpfulness, Honesty, and Harmlessness of Large Language Model via Model Merging},
+  author      = {Yang, Jinluan and Jin, Dingnan and Tang, Anke and Shen, Li and Zhu, Didi and Chen, Zhengyu and Zhao, Ziyu and Wang, Daixin and Cui, Qing and Zhang, Zhiqiang and Zhou, Jun and Wu, Fei and Kuang, Kun},
+  journal     = {The Thirty-Ninth Annual Conference on Neural Information Processing Systems},
+  year        = {2025},
+  bibtex_show = {true},
+  abbr        = {NeurIPS}
 }
 
 @inproceedings{shentargeted,
